--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "random-gif",
+  "homepage": "https://tyagimayank213.github.io/Random-Gif",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.3.5",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
